--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,9 @@ pre { color: inherit; background-color: transparent; }
 </head>
 
 <!-- tocinfo
-{'highest level': 0, 'sections': [('More details', 0, None, '___sec0')]}
+{'highest level': 0,
+ 'sections': [('More details', 0, None, '___sec0'),
+              ('Developped Software and Tools', 2, None, '___sec1')]}
 end of tocinfo -->
 
 <body>
@@ -65,7 +67,7 @@ end of tocinfo -->
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contents <b class="caret"></b></a>
         <ul class="dropdown-menu">
-     <!-- navigation toc: --> <li><a href="#___sec0" style="font-size: 80%;">More details</a></li>
+     <!-- navigation toc: --> <li><a href="#___sec0" style="font-size: 80%;"><b>More details</b></a></li>
 
         </ul>
       </li>
@@ -86,7 +88,9 @@ end of tocinfo -->
 <center><h1>ISWI-Tunisia</h1></center>  <!-- document title -->
 
 <p>
-This web page is to present ISWI project and activities in Tunisia.
+LSAMA's Very Low Frequencies (VLF) team at the <a href="http://www.utm.rnu.tn/utm/fr/" target="_blank">University of Tunis El Manar</a> is part of the International Space Weather Initiative (<a href="http://www.iswi-secretariat.org/" target="_blank">ISWI</a>), a program founded and established by the Committee on the Peaceful Uses of Outer Space (<a href="http://www.unoosa.org/oosa/en/ourwork/copuos/index.html" target="_blank">COPUOS</a>) within the United Nations Office for Outer Space Affairs (<a href="http://www.unoosa.org/" target="_blank">UNOOSA</a>). Our team studies the Earth's electrical environment through the effects of thunderstorm activity, seismic activity, solar activity, volcanic activity and solar eclipses on its upper atmosphere composed of ionosphere and magnetosphere as well as radiation belts.
+
+<p>
 <br /><br /><center><p><img src="media/ISWI_TUN.png" align="bottom" width=200></p></center><br /><br />
 
 <p>
@@ -97,8 +101,13 @@ This web page is to present ISWI project and activities in Tunisia.
 
 <center><h1 id="___sec0" class="anchor">More details </h1></center> <!-- chapter heading -->
 
-<p>
-ToDo
+<h2 id="___sec1" class="anchor">Developped Software and Tools </h2>
+
+<ul>
+<li> <a href="https://github.com/ISWI-Tunisia/AWESOM-SuperSID" target="_blank">AWESOM-SuperSID</a></li>
+<li> ..</li>
+</ul>
+
 
 <!-- ------------------- end of main content --------------- -->
 
