--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@ pre { color: inherit; background-color: transparent; }
 <!-- tocinfo
 {'highest level': 0,
  'sections': [('More details', 0, None, '___sec0'),
-              ('Developped Software and Tools', 2, None, '___sec1')]}
+              ('Developped Software and Tools', 2, None, '___sec1'),
+              ('Workshops and conferences', 2, None, '___sec2')]}
 end of tocinfo -->
 
 <body>
@@ -105,6 +106,12 @@ LSAMA's Very Low Frequencies (VLF) team at the <a href="http://www.utm.rnu.tn/ut
 
 <ul>
 <li> <a href="https://github.com/ISWI-Tunisia/AWESOM-SuperSID" target="_blank">AWESOM-SuperSID</a></li>
+<li> ..</li>
+</ul>
+
+<h2 id="___sec2" class="anchor">Workshops and conferences </h2>
+
+<ul>
 <li> <a href="http://nbviewer.jupyter.org/github/astrax/IMAO_2017/blob/master/Tutoriel%20SID%20&%20GOES.ipynb" target="_blank">IMAO_2017 (fr): Tutoriels Python pour le traitement des donn&#233;es SID et GOES.</a></li>
 </ul>
 
