--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ pre { color: inherit; background-color: transparent; }
 
 <!-- tocinfo
 {'highest level': 0,
- 'sections': [('More details', 0, None, '___sec0'),
-              ('Developped Software and Tools', 2, None, '___sec1')]}
+ 'sections': [('ISWI Instruments in Tunisia', 0, None, '___sec0'),
+              ('Developped Software and Tools', 0, None, '___sec1')]}
 end of tocinfo -->
 
 <body>
@@ -67,7 +67,8 @@ end of tocinfo -->
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contents <b class="caret"></b></a>
         <ul class="dropdown-menu">
-     <!-- navigation toc: --> <li><a href="#___sec0" style="font-size: 80%;"><b>More details</b></a></li>
+     <!-- navigation toc: --> <li><a href="#___sec0" style="font-size: 80%;">ISWI Instruments in Tunisia</a></li>
+     <!-- navigation toc: --> <li><a href="#___sec1" style="font-size: 80%;">Developped Software and Tools</a></li>
 
         </ul>
       </li>
@@ -99,9 +100,72 @@ LSAMA's Very Low Frequencies (VLF) team at the <a href="http://www.utm.rnu.tn/ut
 
 <!-- !split -->
 
-<center><h1 id="___sec0" class="anchor">More details </h1></center> <!-- chapter heading -->
+<center><h1 id="___sec0" class="anchor">ISWI Instruments in Tunisia </h1></center> <!-- chapter heading -->
 
-<h2 id="___sec1" class="anchor">Developped Software and Tools </h2>
+<p>
+<!-- Note: panels are realized as admons, using --admon_style=bootstrap_panel -->
+
+<p>
+<div class="row"> <!-- begin cell row -->
+  <div class="col-sm-4">
+
+<p> <!-- subsequent paragraphs come in larger fonts, so start with a paragraph -->
+<div class="panel panel-primary">
+  <div class="panel-heading">
+  <h3 class="panel-title">SuperSID Monitor</h3>
+  </div>
+<div class="panel-body">
+<p> <!-- subsequent paragraphs come in larger fonts, so start with a paragraph -->
+SOLAR SuperSID (Super - Sudden Ionosphere Disturbance) Monitor
+<br /><br /><center><p><img src="media/SuperSID_mon.jpg" align="bottom" width=200></p></center><br /><br />
+
+<ul>
+<li> Classroom use</li>     
+<li> Inexpensive</li>     
+<li> Monitors multiple VLF stations</li> 
+<li> Primarily tracks solar SID&#8217;s</li> 
+<li> Easy to set up and use</li>  
+<li> Antenna simple to build and low cost</li>
+<li> The data is available on <a href="http://sid.stanford.edu/database-browser/" target="_blank">Stanford Solar Center website</a>.</li> 
+</ul>
+</div>
+</div>
+
+  </div> <!-- column col-sm-4 -->
+  <div class="col-sm-4">
+
+<p> <!-- subsequent paragraphs come in larger fonts, so start with a paragraph -->
+<div class="panel panel-primary">
+  <div class="panel-heading">
+  <h3 class="panel-title">AWESOME Monitor</h3>
+  </div>
+<div class="panel-body">
+<p> <!-- subsequent paragraphs come in larger fonts, so start with a paragraph -->
+Atmospheric Weather Electromagnetic System for Observation Modeling and Education
+
+<p>
+<br /><br /><center><p><img src="media/awesom_mon.jpg" align="bottom" width=200></p></center><br /><br />
+
+<ul>
+<li> Student and researcher use</li> 
+<li> Moderate cost</li>     
+<li> Receives all VLF stations and covers frequencies 30Hz -50 KHz simultaneously</li> 
+<li> High-resolution 16-bit</li>     
+<li> Accurate timing via GPS</li> 
+<li> Monitors solar SID&#8217;s, lightning, GRB's, ionospheric phenomena, etc.</li> 
+<li> Requires 2 antennas: N/S and E/W and a location such as a field  to set up.</li> 
+<li> Requires a computer with processing power to keep up with high-speed data stream and FFT calculations.</li>
+</ul>
+</div>
+</div>
+
+  </div> <!-- column col-sm-4 -->
+</div> <!-- end cell row -->
+
+<p>
+<!-- !split -->
+
+<center><h1 id="___sec1" class="anchor">Developped Software and Tools </h1></center> <!-- chapter heading -->
 
 <ul>
 <li> <a href="https://github.com/ISWI-Tunisia/AWESOM-SuperSID" target="_blank">AWESOM-SuperSID</a></li>
