--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@ SOLAR SuperSID (Super - Sudden Ionosphere Disturbance) Monitor
 <li> Primarily tracks solar SID&#8217;s</li> 
 <li> Easy to set up and use</li>  
 <li> Antenna simple to build and low cost</li>
-<li> The data is available on <a href="http://sid.stanford.edu/database-browser/" target="_blank">Stanford Solar Center website</a>.</li> 
+<li> Data are available on <a href="http://sid.stanford.edu/database-browser/" target="_blank">Stanford Solar Center website</a>.</li> 
 </ul>
 </div>
 </div>
