--- a/index.html
+++ b/index.html
@@ -106,10 +106,9 @@ LSAMA's Very Low Frequencies (VLF) team at the <a href="http://www.utm.rnu.tn/ut
 <!-- Note: panels are realized as admons, using --admon_style=bootstrap_panel -->
 
 <p>
-<div class="row"> <!-- begin cell row -->
-  <div class="col-sm-4">
+<!-- begin-grid-area -->
 
-<p> <!-- subsequent paragraphs come in larger fonts, so start with a paragraph -->
+<p>
 <div class="panel panel-primary">
   <div class="panel-heading">
   <h3 class="panel-title">SuperSID Monitor</h3>
@@ -117,13 +116,13 @@ LSAMA's Very Low Frequencies (VLF) team at the <a href="http://www.utm.rnu.tn/ut
 <div class="panel-body">
 <p> <!-- subsequent paragraphs come in larger fonts, so start with a paragraph -->
 SOLAR SuperSID (Super - Sudden Ionosphere Disturbance) Monitor
-<br /><br /><center><p><img src="media/SuperSID_mon.jpg" align="bottom" width=200></p></center><br /><br />
+<br /><br /><center><p><img src="media/SuperSID_mon.jpg" align="bottom" width=400></p></center><br /><br />
 
 <ul>
 <li> Classroom use</li>     
 <li> Inexpensive</li>     
 <li> Monitors multiple VLF stations</li> 
-<li> Primarily tracks solar SID&#8217;s</li> 
+<li> Primarily tracks solar SID's</li> 
 <li> Easy to set up and use</li>  
 <li> Antenna simple to build and low cost</li>
 <li> Data are available on <a href="http://sid.stanford.edu/database-browser/" target="_blank">Stanford Solar Center website</a>.</li> 
@@ -131,10 +130,8 @@ SOLAR SuperSID (Super - Sudden Ionosphere Disturbance) Monitor
 </div>
 </div>
 
-  </div> <!-- column col-sm-4 -->
-  <div class="col-sm-4">
 
-<p> <!-- subsequent paragraphs come in larger fonts, so start with a paragraph -->
+<p>
 <div class="panel panel-primary">
   <div class="panel-heading">
   <h3 class="panel-title">AWESOME Monitor</h3>
@@ -144,7 +141,7 @@ SOLAR SuperSID (Super - Sudden Ionosphere Disturbance) Monitor
 Atmospheric Weather Electromagnetic System for Observation Modeling and Education
 
 <p>
-<br /><br /><center><p><img src="media/awesom_mon.jpg" align="bottom" width=200></p></center><br /><br />
+<br /><br /><center><p><img src="media/awesom_mon.jpg" align="bottom" width=400></p></center><br /><br />
 
 <ul>
 <li> Student and researcher use</li> 
@@ -152,15 +149,16 @@ Atmospheric Weather Electromagnetic System for Observation Modeling and Educatio
 <li> Receives all VLF stations and covers frequencies 30Hz -50 KHz simultaneously</li> 
 <li> High-resolution 16-bit</li>     
 <li> Accurate timing via GPS</li> 
-<li> Monitors solar SID&#8217;s, lightning, GRB's, ionospheric phenomena, etc.</li> 
+<li> Monitors solar SID's, lightning, GRB's, ionospheric phenomena, etc.</li> 
 <li> Requires 2 antennas: N/S and E/W and a location such as a field  to set up.</li> 
 <li> Requires a computer with processing power to keep up with high-speed data stream and FFT calculations.</li>
 </ul>
 </div>
 </div>
 
-  </div> <!-- column col-sm-4 -->
-</div> <!-- end cell row -->
+
+<p>
+<!-- end-grid-area -->
 
 <p>
 <!-- !split -->
@@ -169,7 +167,8 @@ Atmospheric Weather Electromagnetic System for Observation Modeling and Educatio
 
 <ul>
 <li> <a href="https://github.com/ISWI-Tunisia/AWESOM-SuperSID" target="_blank">AWESOM-SuperSID</a></li>
-<li> <a href="http://nbviewer.jupyter.org/github/astrax/IMAO_2017/blob/master/Tutoriel%20SID%20&%20GOES.ipynb" target="_blank">IMAO_2017 (fr): Tutoriels Python pour le traitement des donn&#233;es SID et GOES.</a></li>
+<li> <a href="http://nbviewer.jupyter.org/github/astrax/IMAO_2017/blob/master/Tutoriel%20SID%20&%20GOES.ipynb" target="_blank">IMAO_2017 (fr): Tutoriels Python pour le traitement des donnees SID et GOES.</a></li>
+<li> <a href="https://iswi-tunisia.github.io/PyDAQviewer/" target="_blank">PyDAQviewer</a></li>
 </ul>
 
 
